# SphereCounter

./: .gitignore  CMakeLists.txt  README.md  SphereCounter.kdev4  auxfunc.cpp  auxfunc.h  container.cpp  container.cpp~  container.h  container.h~  infile.h  infilereader.h  layer.cpp  layer.h  main.cpp  sphere.cpp  sphere.h
